# ferro

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  all.html  crates.js  fn.main.html  help.html  index.html  search-index.js  settings.html  source-files.js  struct.Document.html  struct.FileType.html  struct.Position.html  struct.Row.html
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  ci.yml  rust.yml  rustdoc.yml  test.yml
docs/: instructions.md  usage.md
document/: constant.DEFAULT_SPACES_PER_TAB.html  sidebar-items.js
editor/: constant.DOC_UP.html  constant.PAGE_DOWN.html  constant.POS_LEFT.html  constant.POS_UP.html  constant.WORD_LEFT.html  constant.WORD_RIGHT.html  index.html  sidebar-items.js  struct.Position.html
ferro/: all.html  enum.SearchDirection.html  fn.main.html  index.html  sidebar-items.js  struct.Document.html  struct.FileType.html  struct.HighlightingOptions.html  struct.Position.html  struct.Row.html  struct.Terminal.html
ferro/commands/: index.html  sidebar-items.js  trait.Command.html  type.BoxedCommand.html
ferro/document/: constant.DEFAULT_SPACES_PER_TAB.html  index.html  struct.Document.html
filetype/: index.html  sidebar-items.js  struct.FileType.html  struct.HighlightingOptions.html
highlighting/: enum.Type.html  index.html  sidebar-items.js
row/: sidebar-items.js  struct.Row.html
src/: document.rs  editor.rs  filetype.rs  highlighting.rs  main.rs  row.rs  terminal.rs
terminal/: sidebar-items.js  struct.Size.html  struct.Terminal.html
(+114 files in other folders)
