[package]
name = "ferro"
version = "0.4.0"
edition = "2021"
description = "A lightweight text editor built in Rust"
repository = "https://github.com/alexxyu/ferro"
license = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-vec-deque = "0.1.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shunting = "0.1.2"
termbg = "0.4.3"
termion = "1.5.6"
unicode-segmentation = "1.9.0"
