[package]
name = "ferro"
version = "0.6.0"
edition = "2021"
description = "A lightweight text editor written in Rust"
repository = "https://github.com/alexxyu/ferro"
documentation = "https://alexxyu.github.io/ferro"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-vec-deque = "0.1.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shunting = "0.1.2"
signal-hook = "0.3"
termbg = "0.4.3"
termion = "2.0"
unicode-segmentation = "1.9.0"
